jenkinsaks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customservice
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
    - name: test1
      port: 8080
      targetPort: 8080
    - name: test2
      port: 50000
      targetPort: 50000
