jenkinsaks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: sam123jo0.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customservice
                port:
                  number: 8080
